--- a/resume.css
+++ b/resume.css
@@ -5,10 +5,14 @@ css for resume
 */
 
 body {
-	background-color: #FFFFFF;
+	background-color: #808080;
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 21cm;
+}
+
+form {
+	background-color:#FFFFFF;
 }
 
 .item {
