--- a/resume.css
+++ b/resume.css
@@ -4,17 +4,36 @@ resume.css
 css for resume
 */
 
+body {
+	background-color: #A0A0A0;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 21cm;
+}
+
+form {
+	background-color:#FFFFFF;
+}
+
+.item {
+	break-inside: avoid;
+	overflow: visible;
+}
 
 @media print {
-	.legend {
+	body {
 		background-color: #FFFFFF;
-		page-break-inside: avoid;
-		page-break-after: avoid;
+		font-size: 11px;
 	}
 	
-	.item {
-		page-break-inside: avoid;
+	legend {
+		background-color: #FFFFFF;
 	}
+}
+
+fieldset {
+	border-color: #F0F0F0;
+	border-radius: 5px;
 }
 
 fieldset:nth-child(2n) {
@@ -36,22 +55,24 @@ fieldset:nth-child(2n) legend {
 	font-weight: bold;
 }
 
-.vertical-spaced
-{
+.extra-bottom-space {
+	margin-bottom: 5px;
+}
+
+.vertical-spaced {
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
-.sub-section
-{
+.sub-section {
 	margin-left: 2%;
 	
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
 
-h1, h2, h3, h4
-{
-	margin-top: 5px;
-	margin-bottom: 5px;
+h1, h2, h3, h4 {
+	margin-top: 3px;
+	margin-bottom: 3px;
+	text-align: center;
 }
